# timetabling-buddy

./: .gitignore  Cargo.toml  README.md  exampleCourseList.json
.github/workflows/: main.yml
src/: lib.rs  main.rs
